Ticket 304 fixed alignment of ankle

--- a/source/scss/components/_blocks.scss
+++ b/source/scss/components/_blocks.scss
@@ -74,7 +74,8 @@
         .btn{
             display: block;
             margin: 0 auto;
-            max-width: 320px;
+            max-width: 100%;
+            width: 100%;
         }
         .block--content{
             padding-top: 60px;
